<resources>
    <!-- Main activity -->
    <string name="text_active_group">Groep:</string>
    <string name="btn_nieuwe_cursist">Nieuwe cursist</string>
    <string name="btn_cursisten_lijst">Overzicht cursisten</string>
    <string name="btn_nieuwe_training">Training</string>
    <string name="btn_diploma_uitgeven">Diploma uitgeven</string>
    <string name="btn_bekijk_diploma_eisen">Bekijk diploma eisen</string>
    <string name="btn_groepen_beheren">Groepen beheren</string>

    <!-- Preferences  & other constants -->
    <string name="pref_show_already_completed_label">Laat al gehaald zien.</string>
    <string name="pref_show_already_completed_key" translatable="false">show_already_completed</string>
    <string name="pref_show_already_completed_summary_off">Je ziet geen cursisten die al hebben geleerd wat er in de training gedaan is of die het diploma al gehaald hebben.</string>
    <string name="pref_show_already_completed_summary_on">Je ziet wel cursisten die al hebben geleerd wat er in de training gedaan is of die het diploma al gehaald hebben.</string>

    <string name="pref_show_diploma_after_create_label">Diploma na nieuwe cursist</string>
    <string name="pref_show_diploma_after_create_key" translatable="false">show_diploma_after_create_cursist</string>
    <string name="pref_show_diploma_after_create_summary_off">Na het maken van een nieuwe cursist kun je geen diploma\'s geven.</string>
    <string name="pref_show_diploma_after_create_summary_on">Na het maken van een nieuwe cursist kun je direct diploma\'s opgeven.</string>

    <string name="pref_current_group_name" translatable="false">CurrentGroupName</string>
    <string name="pref_current_group_id" translatable="false">CurrentGroupID</string>
    <string name="pref_discipline" translatable="false">Discipline</string>
    <string name="pref_current_user" translatable="false">CurrentUser</string>

    <string name="file_authority" translatable="false">nl.multimedia_engineer.cwo_app.fileprovider</string>


    <!-- Activity titles actionbar -->
    <string name="actionbar_title_groupActivity">Groepen Beheren</string>
    <string name="actionbar_title_new_group_activity">Nieuwe groep</string>

    <!-- Knoppen -->
    <string name="nee">Nee</string>
    <string name="ja">Ja</string>
    <string name="btn_finish">Afronden</string>

    <!-- Cursist detail -->
    <string name="cursist">Cursist</string>
    <string name="echt_verwijderen">Weet je zeker dat je deze cursist wil verwijderen?</string>
    <string name="cursist_wijzigen">Cursist wijzigen</string>

    <!-- Cursist form -->
    <string name="voornaam">Voornaam</string>
    <string name="tussenvoegsel">Tussenvoegsel</string>
    <string name="achternaam">Achternaam</string>
    <string name="opmerkingen">Opmerkingen</string>
    <string name="paspoort">Paspoort uitgegeven</string>
    <string name="opslaan">Opslaan</string>
    <string name="cursist_opgeslagen">Curist opgeslagen</string>
    <string name="cursist_verwijderd">Cursist verwijderd</string>
    <string name="cursist_verborgen">Cursist verborgen</string>
    <string name="cursist_niet_verborgen">Cursist niet meer verborgen</string>
    <string name="minimum_form_demand">Vul op z\'n minst de voornaam van de cursist in.</string>

    <!-- cursist list -->
    <string name="empty_cursist_list">Er zijn nog geen cursisten in deze groep, voeg eerst cursisten toe.</string>

    <!-- Training list -->
    <string name="volgende">Volgende</string>
    <string name="ok">OK</string>
    <string name="wat_geoefend">Welke onderdelen zijn getraind?</string>

    <!-- cursist menu -->
    <string name="edit">Edit</string>
    <string name="delete">Verwijderen</string>
    <string name="verbergen">Verbergen</string>
    <string name="niet_verbergen">Niet meer verbergen</string>
    <string name="search">Zoeken</string>

    <!-- Diploma uitgeven -->
    <string name="diploma_uitgeven_tekst">Kies welk diploma je wil uitgeven.</string>

    <!-- Error tekst -->
    <string name="opslaan_mislukt">Opslaan mislukt, probeer het later opnieuw.</string>
    <string name="title_activity_cursisten_behalen_diploma">CursistenBehalenDiplomaActivity</string>

    <!-- titel labels -->
    <string name="app_name">Watersport Training</string>
    <string name="login">Login</string>
    <string name="hint_email_adres">E-mail adres</string>
    <string name="hint_password">Paswoord</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registreer</string>
    <string name="text_register">Klik hier om een nieuw account te registreren.</string>
    <string name="text_login">Klik hier om met een bestaand account in te loggen.</string>
    <string name="text_fields_filled_wrong">Vul alle velden juist in om door te gaan.</string>

    <!-- Menu items -->
    <string name="action_logout">Uitloggen</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_group">Groepen beheren</string>
    <string name="action_save">Opslaan</string>

    <!-- Groepen -->
    <string name="description_new_group">Kies de naam van de groep om een nieuwe groep te maken.</string>
    <string name="hint_group_name">Groepsnaam</string>
    <string name="btn_new_group">Maak nieuwe groep</string>
    <string name="description_join_group">Wanneer een trainer van een gezamelijke groep al een groep heeft aangemaakt kun je bij deze groep toegevoegd worden. Vraag aan je collega om een toegangscode.</string>
    <string name="hint_group_access_code">Toegangscode</string>
    <string name="btn_join_group">Groep toevoegen</string>
    <string name="error_msg_access_code_wrong">De toegangscode is onjuist.</string>
    <string name="text_explanation_groups">De groep die nu actief is wordt met een vinkje aangegeven, klik op een andere groep om deze actief te maken. Met het pennetje kun je de naam wijzigen, de rode x verwijderd de groep. Klik op de zwevende actieknop onderaan om een nieuwe groep te maken.</string>
    <string name="context_description_edit">Wijzigen</string>
    <string name="context_description_delete">Verwijderen</string>
    <string name="context_description_active">Actief</string>
    <string name="context_description_share">Delen</string>
    <string name="clip_data_group_code">Groep code</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_title_delete">Verwijderen</string>
    <string name="alert_dialog_text_delete_group">Wil je deze groep verwijderen? Je kunt de groep enkel voor jou verwijderen, of voor alle trainers/beheerders van de groep.</string>
    <string name="alert_dialog_verify_delete_all">Weet je zeker dat je deze groep voor alle gebruikers wilt verwijderen?</string>

    <string name="alert_dialog_title_update">Wijzigen</string>
    <string name="alert_dialog_text_update_group">Vul hier een nieuwe naam in voor je groep. Deze nieuwe naam is enkel voor jou zichtbaar, voor andere beheerders van de groep veranderd er niets.</string>

    <string name="alert_dialog_title_loading">Laden</string>
    <string name="alert_dialog_text_loading">Een moment geduld, de gegevens worden geladen.</string>

    <string name="alert_dialog_error_title">Oops</string>
    <string name="alert_dialog_error_tekst">Er is iets fout gegaan, probeer het later opnieuw.</string>

    <string name="alert_dialog_delete_all">Alles verwijderen</string>
    <string name="alert_dialog_delete_for_me">Alleen voor mij</string>

    <string name="alert_dialog_first_group_title">Groep maken</string>
    <string name="alert_dialog_first_group_text">Hier kun je een groep aanmaken, je hebt minimaal 1 groep nodig om de app te kunnen gebruiken.</string>

    <string name="alert_dialog_share_group_title">Groep delen</string>
    <!--<string name="alert_dialog_share_group_text">Geef deze code door aan de persoon met wie je de groep wilt delen: %1$s Deze code is al voor je gekopieerd.</string>-->

    <string name="alert_dialog_share_group_text">Geef deze code door aan de persoon met wie je de groep wilt delen: %1$s Deze code is al voor je gekopieerd.</string>

    <string name="alert_dialog_no_cursist_title">Geen cursisten</string>
    <string name="alert_dialog_no_cursist_text">Voeg eerst minimaal 1 cursist toe in deze groep.</string>

    <string name="alert_dialog_leave_without_saving_title">Terug naar menu</string>
    <string name="alert_dialog_leave_without_saving_text">Wil je de ingevulde gegevens weggooien en terug gaan naar het menu?</string>

    <string name="alert_dialog_text_ok">OK</string>
    <string name="alert_dialog_text_cancel">Annuleren</string>
    <string name="alert_dialog_text_no">Nee</string>
    <string name="alert_dialog_text_yes">Ja</string>

    <string name="alert_dialog_text_no_such_access_code">De toegangscode die je hebt ingevuld is onbekend. Controleer of deze juist is ingevuld.</string>


    <string name="privacy_text">Privacy verklaring en Gebruiksvoorwaarden
        Kort samengevat, bij de ontwikkeling van deze app is geprobeerd aan alle privacy eisen te voldoen en een goed werkende app ter beschikking te stellen,
        er kan echter geen garantie gegeven worden dat dit 100 procent geslaagd is. Vraag toestemming aan je cursisten voor je hun gegevens invoert.

        Het CWO is NIET betrokken bij deze app.

        Persoonsgegevens:
        In deze app kun je gegevens van cursisten opslaan waarmee zij te herkennen zijn, dit omvat voornaam, tussenvoegsel, achternaam en een foto.
        Ook is het mogelijk om een opmerking toe te voegen waarin persoonlijke informatie staat. Daarnaast wordt in deze app ook bijgehouden hoe ver cursisten zijn in hun opleiding, wat zij al
        wel of nog niet geleerd hebben. Deze informatie kan in de toekomst samengevoegd worden om per trainingsgroep te bepalen welke elementen nog extra training nodig hebben.
        Door een trainer verwijderde data is door de ontwikkelaar niet terug te halen. Er wordt gebruik gemaakt van een cloud oplossing voor data,
        gevestigd binnen de EU die zelf back up functionaliteiten heeft in geval van grootschalige problemen, maar hier worden gebackupte gegevens slecths korte tijd bewaard.

        Gebruik persoonsgegevens door gebruiker:
        De gebruiker van de app is verantwoordlijk om toestemming te hebben voor alle persoonsgegevens die hij/zij in deze app invoert.
        De gebruiker is ook verantwoordlijk om indien gewenst gegevens van een cursist weer te verwijderen, of veranderen of aanvraag van de betreffende persoon.

        Gebruik persoonsgegevens door app en ontwikkelaar:
        De ontwikkelaar zal enkel gebruik maken van live data wanneer dit voor de oplossing van een bug noodzakelijk is. De ontwikkelaar bekijkt geen persoonsgegevens tenzij hier toe
        een technische, wettelijke of morele verplichting bestaat. Er wordt geen data doorverkocht of getoond aan derden.
        De app bewaart, leest en toont gegevens van cursisten aan de specifieke trainers, daarnaast kunnen in de toekomst de gegevens gebruikt worden voor informatie over groepen ten behoeve van trainingen.
        Geanonimiseerde gegevens kunnen ook buiten de app gebruikt worden, bv om inzicht te krijgen dat bepaalde eisen altijd als laatste aan bod komen voor een diploma.

        De CWO Training app wordt geleverd as-is, waarbij geen enkele aansprakelijkheid voor het functioneren van de app zoals verwacht, of omschreven aanvaard wordt.
        Het is mogelijk dat in de toekomst de app zonder waarschuwing niet meer beschikbaar is, of niet meer functioneert zoals voorheen.

         </string>

    <string name="text_accept_conditions">Ik accepteer de voorwaarden.</string>

    <!--  In app texts -->
    <string name="img_path">/CWO_APP/Pictures</string>

</resources>
